--- a/flask_blog/templates/base.html
+++ b/flask_blog/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Flask Blog{% endblock %}</title>
+    <title>{% block title %}Blogside Story{% endblock %}</title>
     
     <!-- Bootstrap 5 CSS -->
     <link rel="stylesheet" href="https://cdn.replit.com/agent/bootstrap-agent-dark-theme.min.css">
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('blog.index') }}">
-                <i class="fas fa-pen-fancy me-2"></i>Flask Blog
+                <i class="fas fa-pen-fancy me-2"></i>Blogside Story
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,52 +110,54 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light py-4 mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h5>Flask Blog</h5>
-                    <p>A simple blog application built with Flask.</p>
-                </div>
-                <div class="col-md-3">
-                    <h5>Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="{{ url_for('blog.index') }}" class="text-decoration-none text-light">Home</a></li>
-                        {% if current_user.is_authenticated %}
-                            <li>
-                                <a href="{{ url_for('blog.dashboard') }}" class="text-decoration-none text-light">Dashboard</a>
-                            </li>
-                        {% else %}
-                            <li>
-                                <a href="{{ url_for('auth.login') }}" class="text-decoration-none text-light">Login</a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for('auth.register') }}" class="text-decoration-none text-light">Register</a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h5>Follow</h5>
-                    <div class="d-flex">
-                        <a href="#" class="text-light me-2">
-                            <i class="fab fa-twitter fa-2x"></i>
-                        </a>
-                        <a href="#" class="text-light me-2">
-                            <i class="fab fa-facebook fa-2x"></i>
-                        </a>
-                        <a href="#" class="text-light">
-                            <i class="fab fa-github fa-2x"></i>
-                        </a>
-                    </div>
-                </div>
+    <!-- Footer -->
+<footer class="footer-section bg-dark text-light py-4 mt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 footer-branding border-end">
+                <h5>Blogside Story</h5>
+                <p>Every post has a plot.</p>
+                <p>Blogside Story is a space where thoughts turn into stories. We cover everything from daily musings to deep dives into tech, life, and creativity.</p>
             </div>
-            <hr>
-            <div class="text-center">
-                <p>&copy; 2025 Flask Blog. All rights reserved.</p>
+            <div class="col-md-3 footer-links border-end">
+                <h5>Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="{{ url_for('blog.index') }}" class="text-decoration-none text-light">Home</a></li>
+                    {% if current_user.is_authenticated %}
+                        <li>
+                            <a href="{{ url_for('blog.dashboard') }}" class="text-decoration-none text-light">Dashboard</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="{{ url_for('auth.login') }}" class="text-decoration-none text-light">Login</a>
+                        </li>
+                        <li>
+                            <a href="{{ url_for('auth.register') }}" class="text-decoration-none text-light">Register</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+            <div class="col-md-3 footer-social">
+                <h5>Follow</h5>
+                <div class="d-flex">
+                    <a href="#" class="text-light me-2">
+                        <i class="fab fa-twitter fa-2x"></i>
+                    </a>
+                    <a href="#" class="text-light me-2">
+                        <i class="fab fa-facebook fa-2x"></i>
+                    </a>
+                    <a href="#" class="text-light">
+                        <i class="fab fa-github fa-2x"></i>
+                    </a>
+                </div>
             </div>
         </div>
-    </footer>
+        <hr>
+        <div class="text-center">
+            <p>&copy; 2025 Blogside Story. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
 
     <!-- Bootstrap 5 JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
