--- a/flask_blog/templates/base.html
+++ b/flask_blog/templates/base.html
@@ -114,12 +114,12 @@
 <footer class="footer-section bg-dark text-light py-4 mt-5">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 footer-branding border-end">
+            <div class="col-md-6 footer-branding">
                 <h5>Blogside Story</h5>
                 <p>Every post has a plot.</p>
-                <p>Blogside Story is a space where thoughts turn into stories. We cover everything from daily musings to deep dives into tech, life, and creativity.</p>
+                <p class="p-2">Blogside Story is a space where thoughts turn into stories. We cover everything from daily musings to deep dives into tech, life, and creativity.</p>
             </div>
-            <div class="col-md-3 footer-links border-end">
+            <div class="col-md-3 footer-links">
                 <h5>Links</h5>
                 <ul class="list-unstyled">
                     <li><a href="{{ url_for('blog.index') }}" class="text-decoration-none text-light">Home</a></li>
